--- a/app/travelexpense-ui/webapp/manifest.json
+++ b/app/travelexpense-ui/webapp/manifest.json
@@ -63,6 +63,7 @@
         }
       },
       "": {
+        "type": "sap.ui.model.odata.v4.ODataModel",
         "dataSource": "mainService",
         "preload": true,
         "settings": {
