--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "private": true,
   "dependencies": {
     "@cap-js/hana": "^2",
+    "@sap-cloud-sdk/connectivity": "^4.1.0",
+    "@sap-cloud-sdk/http-client": "^4.1.0",
     "@sap/cds": "^9",
     "@sap/cds-common-content": "^3.0.1",
     "@sap/xssec": "^4",
@@ -19,8 +21,8 @@
     "@cap-js/cds-types": "^0.13.0",
     "@cap-js/sqlite": "^2",
     "@sap/cds-dk": ">=8",
-    "rimraf": "^5.0.5",
-    "mbt": "^1.2.29"
+    "mbt": "^1.2.29",
+    "rimraf": "^5.0.5"
   },
   "scripts": {
     "start": "cds-serve",
@@ -31,7 +33,14 @@
   },
   "cds": {
     "requires": {
-      "[production]": {
+      "destination": {
+        "kind": "destination", 
+        "vcap": {
+          "label": "destination",
+          "plan": "lite"
+        }
+      },
+    "[production]": {
         "auth": "xsuaa"
       }
     }
