--- a/db/package.json
+++ b/db/package.json
@@ -4,7 +4,7 @@
       "@sap/hdi-deploy": "^4.0.0"
     },
     "scripts": {
-      "start": "node node_modules/@sap/hdi-deploy/deploy.js"
+      "start": "node node_modules/@sap/hdi-deploy/deploy.js --exit"
     }
   }
   
