added Draft Review screen

--- a/app/travelexpense-ui/webapp/manifest.json
+++ b/app/travelexpense-ui/webapp/manifest.json
@@ -116,6 +116,11 @@
           "pattern": "ReviewTravelScreen/{travelId}",
           "name": "ReviewTravelScreen",
           "target": "ReviewTravelScreen"
+        },
+        {
+          "pattern": "ReviewDraftRequest/{travelId}",
+          "name": "ReviewDraftRequest",
+          "target": "ReviewDraftRequest"
         }
       ],
       "targets": {
@@ -126,6 +131,11 @@
         "ReviewTravelScreen": {
           "id": "ReviewTravelScreen",
           "name": "ReviewTravelScreen",
+          "viewLevel": 2
+        },
+        "ReviewDraftRequest": {
+          "id": "ReviewDraftRequest",
+          "name": "ReviewDraftRequest",
           "viewLevel": 2
         }
       }
